--- a/styles.css
+++ b/styles.css
@@ -394,7 +394,7 @@ outline: none;
     width: 400px;
     border-radius: 4px;
     background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100% ),
-     url('/images/pic3.jpg');
+     url('images/pic3.jpg');
     background-size: cover;
     position: relative;
     color: #fff;
