--- a/styles.css
+++ b/styles.css
@@ -403,7 +403,7 @@ outline: none;
 
 .services__card:nth-child(2){
     background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100% ),
-    url('/images/pic4.jpeg');
+    url('images/pic4.jpeg');
 }
 
 .services h2{
